# clay-ncurses

./: CMakeLists.txt
src/: main.c
